<resources>
    <string name="app_name">Firebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mascotas</string>
    <string name="menu_gallery">Tus Publicaciones</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="menu_exit">Cerrar Sesión</string>

    <string name="home_second">Home Second</string>

    <string name="welcome">Welcome</string>
    <string name="prompt_email">Enter your Email</string>
    <string name="action_sing_in">Next</string>
    <string name="pdhn">© Copyright 2020</string>
    
    <string name="error_fleld_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    
    <string name="action_sing_in_short">Sing In</string>
    <string name="prompt_password">Enter your password</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="networks">No tienes acceso a internet</string>
    <string name="invalid_credentials">Credenciales invalidas</string>
</resources>
