<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="passwordModel" type="ViewModels.LoginViewModels" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/gradient_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    app:srcCompat="@mipmap/icon_logos" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/action_sing_in_short"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@{passwordModel.email}"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        app:binding="@{passwordModel.passwordUI}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/password_sing_in_botton"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/borde_redondo"
                    android:text="@string/action_sing_in_short"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:onClick="@{passwordModel::onClick}"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pdhn"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>